--- a/Project1/style.css
+++ b/Project1/style.css
@@ -51,7 +51,7 @@ main{
     
 }
     section{
-       height:500px;
+       height:550px;
        border:solid 1px black;
     }
     section p{
@@ -75,6 +75,27 @@ main{
     border:none;
 
 }
+   .youtube img{
+       width:200px;
+       margin-left:32%;
+   }
+   .youtube a{
+       text-decoration:none;
+       color:black;
+   }
+   .logo-descarga{
+     margin-left:30%; 
+   }
+   .logo-descarga i{
+    color: #f17575;
+   }
+.volver-arriba{
+    margin-left:44%;
+}
+   .volver-arriba a{
+       text-decoration:none;
+       color:black;
+   }
 footer{
     width: 100%;
     height:300px;
